# AdePT

examples/Par04/: AdeptIntegration.cpp  AdeptIntegration.cu  AdeptIntegration.cuh  AdeptIntegration.h  CMakeLists.txt  History  README  README.md  Scoring.h  electrons.cu  examplePar04.cpp  examplePar04.in  gammas.cu  relocation.cu  vis.mac
examples/Par04/include/: Par04ActionInitialisation.hh  Par04DetectorConstruction.hh  Par04DetectorMessenger.hh  Par04EMShowerMessenger.hh  Par04EMShowerModel.hh  Par04EventAction.hh  Par04Hit.hh  Par04PrimaryGeneratorAction.hh  Par04PrimaryGeneratorMessenger.hh  Par04RunAction.hh  Par04SensitiveDetector.hh
examples/Par04/src/: Par04ActionInitialisation.cc  Par04DetectorConstruction.cc  Par04DetectorMessenger.cc  Par04EMShowerMessenger.cc  Par04EMShowerModel.cc  Par04EventAction.cc  Par04Hit.cc  Par04PrimaryGeneratorAction.cc  Par04PrimaryGeneratorMessenger.cc  Par04RunAction.cc  Par04SensitiveDetector.cc
examples/TestEm3/: TestEm3.cpp  TestEm3.cu  TestEm3.cuh  TestEm3.h  electrons.cu  gammas.cu
